--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   sqflite: ^2.3.3
   path: ^1.9.0
   path_provider: ^2.1.3
-  animated_text_kit: ^4.2.2
+  flutter_value_notifier: ^1.5.1
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
